@@ -3,6 +3,8 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: Don't try to create sql-tables on every startup, but only on
+       sql-scheme (DATABASE_VERSION) changes.
   FIX: Display splash screen on correct desktop with Xinerama.
   CHG: CollectionBrowser filter now works in "search-as-you-type" mode.
   FIX: Prevent TitleProxy from showing the same metadata over and over.
